--- a/public/view/index.html
+++ b/public/view/index.html
@@ -13,6 +13,14 @@
             <button>Send</button>
         </form>
 
+        <form id="startForm">
+            <button>Start</button>
+        </form>
+
+        <form id="skipForm">
+            <button>Skip</button>
+        </form>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <script type="text/javascript" src="client.js"></script>
