--- a/public/view/index.html
+++ b/public/view/index.html
@@ -9,7 +9,7 @@
         <ul id="messages"></ul>
 
         <form id="messageForm">
-            <input id="message"/>
+            <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
 
@@ -18,8 +18,10 @@
         </form>
 
         <form id="skipForm">
-            <button>Skip</button>
+            <button>Skip User</button>
         </form>
+
+        <p id="feedback"></p>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
