--- a/public/view/index.html
+++ b/public/view/index.html
@@ -9,6 +9,7 @@
         <ul id="messages"></ul>
 
         <form id="messageForm">
+            <input type="file" name="imageSend" id="imageSend" multiple accept="image/*">
             <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
