--- a/public/view/index.html
+++ b/public/view/index.html
@@ -10,6 +10,7 @@
 
         <form id="messageForm">
             <input type="file" name="imageSend" id="imageSend" multiple accept="image/*">
+            <input type="file" name="videoSend" id="videoSend" multiple accept="video/*">
             <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
