Send and receive audio files.

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -11,6 +11,7 @@
         <form id="messageForm">
             <input type="file" name="imageSend" id="imageSend" multiple accept="image/*">
             <input type="file" name="videoSend" id="videoSend" multiple accept="video/*">
+            <input type="file" name="audioSend" id="audioSend" multiple accept="audio/*">
             <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
