Combine image, video & audio send inputs into 1.

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -9,9 +9,8 @@
         <ul id="messages"></ul>
 
         <form id="messageForm">
-            <input type="file" name="imageSend" id="imageSend" multiple accept="image/*">
-            <input type="file" name="videoSend" id="videoSend" multiple accept="video/*">
-            <input type="file" name="audioSend" id="audioSend" multiple accept="audio/*">
+            <label for="filesSend">Send Images/Videos/Audios</label>
+            <input type="file" name="filesSend" id="filesSend" multiple>
             <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
