--- a/public/view/index.html
+++ b/public/view/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Jahidul Pabel Islam">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
         <title>Buddy Support</title>
-        <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="lib/main.css"/>
+        <link rel="icon" href="images/logo.png">
     </head>
 
     <body>
@@ -27,6 +33,6 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-        <script type="text/javascript" src="client.js"></script>
+        <script type="text/javascript" src="lib/client.js"></script>
     </body>
 </html>
