Feedback on contact form.

--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -36,8 +36,13 @@
 
         </form>
 
+        <p id="feedback"></p>
+
         <p>Or you can send your enquires or messages to <a href="mailto:jahidul.pabel.islam@hotmail.com" target="_blank">
             jahidul.pabel.islam@hotmail.com
         </a>.</p>
+
+        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="lib/form.js"></script>
     </body>
 </html>
