--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -1,17 +1,24 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Jahidul Pabel Islam">
         <meta name="description" content="">
         <meta name="keywords" content="">
-        <title>Buddy Support</title>
         <link rel="stylesheet" href="lib/main.css"/>
         <link rel="icon" href="images/logo.png">
+        <title>Chat | Buddy Support</title>
     </head>
 
     <body>
+
+        <header>
+            <a href="/">Chat</a>
+            <a href="contact">Contact</a>
+        </header>
+
         <ul id="messages"></ul>
 
         <form id="messageForm">
