--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -23,11 +23,11 @@
 
         <form id="messageForm">
             <label for="photosSend">Send Images</label>
-            <input type="file" name="photosSend" id="photosSend" multiple accept="image/*">
+            <input type="file" name="photosSend" class="filesSend" id="photosSend" multiple accept="image/*">
             <label for="videosSend">Send Videos</label>
-            <input type="file" name="videosSend" id="videosSend" multiple accept="video/*">
+            <input type="file" name="videosSend" class="filesSend" id="videosSend" multiple accept="video/*">
             <label for="audiosSend">Send Audios</label>
-            <input type="file" name="audiosSend" id="audiosSend" multiple accept="audio/*">
+            <input type="file" name="audiosSend" class="filesSend" id="audiosSend" multiple accept="audio/*">
             <input id="message" placeholder="hello :)..."/>
             <button>Send</button>
         </form>
