Allow reporting and blocking a user.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -40,6 +40,10 @@
             <button>Skip User</button>
         </form>
 
+        <form id="reportForm">
+            <button>Report User</button>
+        </form>
+
         <p id="feedback"></p>
 
         <script src="/socket.io/socket.io.js"></script>
