Separate server file.

--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -51,6 +51,6 @@
         </a>.</p>
 
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-        <script type="text/javascript" src="lib/form.js"></script>
+        <script type="text/javascript" src="lib/contactForm.js"></script>
     </body>
 </html>
