Feedback on events.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -32,7 +32,7 @@
             <button id="textSend">Send</button>
         </div>
 
-        <button id="startButton">Start</button>
+        <button id="startButton">Start Chatting</button>
 
         <button id="skipButton">Skip User</button>
 
