--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -28,8 +28,10 @@
             <input type="file" name="videosSend" class="filesSend" id="videosSend" multiple accept="video/*" capture>
             <label for="audiosSend">Send Audios</label>
             <input type="file" name="audiosSend" class="filesSend" id="audiosSend" multiple accept="audio/*" capture>
-            <input id="message" placeholder="hello :)..."/>
-            <button id="textSend">Send</button>
+            <form id="textSend">
+                <input id="message" placeholder="hello :)..."/>
+                <button>Send</button>
+            </form>
         </div>
 
         <button id="startButton">Start Chatting</button>
