Add Date and Time to messages.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -34,7 +34,7 @@
             </form>
         </div>
 
-        <button id="startButton">Start Chatting</button>
+        <button id="startButton" autofocus>Start Chatting</button>
 
         <button id="skipButton">Skip User</button>
 
@@ -45,5 +45,6 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <script type="text/javascript" src="lib/ui.js"></script>
+        <script type="text/javascript" src="lib/helperFunctions.js"></script>
     </body>
 </html>
