--- a/public/view/contact.html
+++ b/public/view/contact.html
@@ -14,6 +14,11 @@
 
     <body>
 
+        <header>
+            <a href="/">Chat</a>
+            <a href="contact">Contact</a>
+        </header>
+
         <h3>Form</h3>
         <p>Use this contact form for any enquires or to give us any feedback quickly.</p>
         <p>* indicates a required field</p>
