--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -14,6 +14,11 @@
 
     <body>
 
+        <header>
+            <a href="/">Chat</a>
+            <a href="contact">Contact</a>
+        </header>
+
         <ul id="messages"></ul>
 
         <div id="messageForm">
