Add Server Code for Help Page.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -17,6 +17,7 @@
         <header>
             <a href="/">Chat</a>
             <a href="contact">Contact</a>
+            <a href="help">Help</a>
         </header>
 
         <ul id="messages"></ul>
