--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -29,9 +29,30 @@ body {
     display: none;
 }
 
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
+#messages {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
-input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+#messages li {
+    padding: 5px 10px;
+}
+
+#messages li:nth-child(odd) {
+    background: #eee;
+}
+
+input {
+    border: 0;
+    padding: 10px;
+    width: 90%;
+    margin-right: .5%;
+}
+
+button {
+    width: 9%;
+    background: rgb(130, 224, 255);
+    border: none;
+    padding: 10px;
+}
