Insert Some Instruction into Help Page.

--- a/public/view/help.html
+++ b/public/view/help.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Help - Buddy Support</title>
-</head>
-<body>
-<header>
-    <a href="/">Chat</a>
-    <a href="contact">Contact</a>
-    <a href="help">Help</a>
-</header>
-<h3>Help</h3>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Help - Buddy Support</title>
+    </head>
+
+    <body>
+        <header>
+            <a href="/">Chat</a>
+            <a href="contact">Contact</a>
+            <a href="help">Help</a>
+        </header>
+
+        <h2>Help</h2>
+
+        <h4>On Start Page.</h4>
+
+        <ol>
+            <li>Choose whether you are a Supporter Or want Support</li>
+            <li>Select what you want to talk about.</li>
+            <li>Click (Insert The Same Looking Button) to Find a Match.</li>
+        </ol>
+
+        <h4>On Chat Page.</h4>
+
+        <ul>
+            <li>You can Type into (Insert Same Input) and Send a text Message by clicking Enter or (Insert Same Button).</li>
+            <li>You can Skip the matched user by clicking on (Insert Same Button).</li>
+            <li>You can Report the matched user by clicking on (Insert Same Button).</li>
+            <li>You can invite the other user to a game, you can choose by clicking on (Insert Same Button) then click on your chosen game.</li>
+        </ul>
+
+        <p>If you skip, report, get skipped, reported or blocked you will be redirected to start page where you can can change your options and rematch.</p>
+
+        <h4>On Contact Form Page.</h4>
+        <p>You can use the form to send us a enqiry or some feedback.</p>
+
+        <ul>
+            <li>You will have to enter your email address.</li>
+            <li>You can enter a subject for the message.</li>
+            <li>You will have to enter your message.</li>
+        </ul>
+    </body>
 </html>
