--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -25,34 +25,21 @@ body {
     display: none;
 }
 
-#loading {
-    display: none;
+#messages li, #messages li * {
+    max-width: 75%;
+    display: inline-block;
 }
 
-#messages {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+#messages li.received {
+    float: left;
+    background: dodgerblue;
 }
 
-#messages li {
-    padding: 5px 10px;
-}
-
-#messages li:nth-child(odd) {
-    background: #eee;
-}
-
-input {
-    border: 0;
-    padding: 10px;
-    width: 90%;
-    margin-right: .5%;
+#messages li.sent {
+    float: right;
+    background: green;
 }
 
 button {
-    width: 9%;
-    background: rgb(130, 224, 255);
-    border: none;
-    padding: 10px;
+    color: black;
 }
