Add the HTML for user preferences.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -81,6 +81,22 @@
 
         <div>
             <div class="container">
+                <p>I want to be a:</p>
+                <div class="radio">
+                    <label><input type="radio" name="type" value="Supporter">Supporter</label>
+                </div>
+                <div class="radio">
+                    <label><input type="radio" name="type" value="Supportee">Supportee</label>
+                </div>
+
+                <p>I want to talk about:</p>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="Stress">Stress</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="Loneliness">Loneliness</label>
+                </div>
+
                 <button id="startButton" class="btn btn-default" autofocus>Start Chatting</button>
 
                 <button id="skipButton" class="btn btn-default">Skip User</button>
