Rename ui.js > chat.js & store user preferences.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -81,21 +81,24 @@
 
         <div>
             <div class="container">
-                <p>I want to be a:</p>
-                <div class="radio">
-                    <label><input type="radio" name="type" value="Supporter">Supporter</label>
-                </div>
-                <div class="radio">
-                    <label><input type="radio" name="type" value="Supportee">Supportee</label>
-                </div>
 
-                <p>I want to talk about:</p>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="Stress">Stress</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="Loneliness">Loneliness</label>
-                </div>
+                <form id="preferences">
+                    <p>I want to be a:</p>
+                    <div class="radio">
+                        <label><input type="radio" name="type" value="Supporter">Supporter</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="type" value="Supportee">Supportee</label>
+                    </div>
+
+                    <p>I want to talk about:</p>
+                    <div class="checkbox">
+                        <label><input type="checkbox" name="talk" value="Stress">Stress</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" name="talk" value="Loneliness">Loneliness</label>
+                    </div>
+                </form>
 
                 <button id="startButton" class="btn btn-default" autofocus>Start Chatting</button>
 
@@ -113,6 +116,6 @@
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/ui.js"></script>
+        <script type="text/javascript" src="lib/chat.js"></script>
     </body>
 </html>
