--- a/public/lib/main.css
+++ b/public/lib/main.css
@@ -8,6 +8,28 @@ body {
     font: 13px Helvetica, Arial;
 }
 
+.container {
+    max-width: 100%;
+    margin: auto;
+}
+
+#logoContainer {
+    padding: 5px 15px;
+}
+
+#logo {
+    height: 100%;
+    opacity: .9;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+#logo:hover {
+    opacity: 1;
+}
+
 #messageForm {
     background: #000;
     padding: 3px;
@@ -15,31 +37,66 @@ body {
     bottom: 0;
     width: 100%;
     color: white;
-}
-
-#skipButton {
     display: none;
 }
 
-#reportButton {
-    display: none;
-}
-
-#messages li, #messages li * {
+#messages>p {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
     max-width: 75%;
-    display: inline-block;
+    padding: 5px;
+    margin: 5px 0;
 }
 
-#messages li.received {
-    float: left;
+#messages>p.received{
+    text-align: left;
     background: dodgerblue;
 }
 
-#messages li.sent {
-    float: right;
+#messages>p.sent{
+    text-align: right;
     background: green;
+    margin-left: auto;
 }
 
 button {
     color: black;
+}
+
+#chat {
+    display: none;
+}
+
+#startContainer {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    text-align: center;
+}
+
+#preferences {
+    margin: auto;
+    display: block;
+    text-align: center;
+}
+
+#startButton {
+    margin: auto;
+}
+
+#chatButtons {
+    display: none;
+    position: fixed;
+    width: 100%;
+}
+
+#reportButton {
+    float: right;
+}
+
+#gameSelect button {
+    width: 100%;
 }
