--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -56,18 +56,14 @@
                     <div class="input-group-btn btn-group dropup" role="group">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+                            🎮
                         </button>
                         <ul class="dropdown-menu" id="gameSelect">
                             <li>
-                                <button type="button" class="btn btn-default"><span
-                                        class="glyphicon glyphicon-facetime-video"
-                                        aria-hidden="true"></span></button>
+                                <button type="button" class="btn btn-default">🎮</button>
                             </li>
                             <li>
-                                <button type="button" class="btn btn-default"><span
-                                        class="glyphicon glyphicon-facetime-video"
-                                        aria-hidden="true"></span></button>
+                                <button type="button" class="btn btn-default">🎮</button>
                             </li>
                         </ul>
                     </div>
