Fix: Send Button Not Working.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -70,8 +70,8 @@
 
                     <input id="message" placeholder="hello :)..." class="form-control"/>
                     <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">Send</button>
-                                    </span>
+                                                <button class="btn btn-default" type="submit">Send</button>
+                                            </span>
                 </form><!-- /input-group -->
 
             </div>
