--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -122,7 +122,7 @@
 
                 <p id="feedback"></p>
 
-                <div id="motivationalMessageContainer"><p id="motivationalMessage"></p></div>
+                <p id="motivationalMessage"></p>
             </div>
         </div>
 
