Change Talk > Topic.

--- a/public/view/chat.html
+++ b/public/view/chat.html
@@ -107,13 +107,13 @@
                     <fieldset>
                     <legend>I want to talk about:</legend>
                     <div class="checkbox">
-                        <label for="anything"><input type="checkbox" name="talk" value="Anything" checked id="anything">Anything</label>
+                        <label for="anything"><input type="checkbox" name="topic" value="Anything" checked id="anything">Anything</label>
                     </div>
                     <div class="checkbox">
-                        <label for="stress"><input type="checkbox" name="talk" value="Stress" id="stress">Stress</label>
+                        <label for="topic1"><input type="checkbox" name="topic" value="Topic 1" id="topic1">Topic 1</label>
                     </div>
                     <div class="checkbox">
-                        <label for="loneliness"><input type="checkbox" name="talk" value="Loneliness" id="loneliness">Loneliness</label>
+                        <label for="topic2"><input type="checkbox" name="topic" value="Topic 2" id="topic2">Topic 2</label>
                     </div>
                     </fieldset>
                 </form>
